[gd_scene load_steps=3 format=3 uid="uid://ddyhii4udlxur"]

[ext_resource type="Script" path="res://demo/password_auth_demo.gd" id="1_jod17"]
[ext_resource type="Script" path="res://password_auth.gd" id="2_sp851"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_jod17")

[node name="PasswordAuth" type="Node" parent="."]
script = ExtResource("2_sp851")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 31.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_top = 2.0
offset_right = 79.0
offset_bottom = 28.0
text = "Password:"

[node name="LineEdit" type="LineEdit" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
offset_left = 83.0
offset_right = 1152.0
offset_bottom = 31.0
size_flags_horizontal = 3

[node name="Server" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 35.0
offset_right = 1152.0
offset_bottom = 66.0
text = "Server"

[node name="Client" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 70.0
offset_right = 1152.0
offset_bottom = 101.0
text = "Client"

[connection signal="auth_failed" from="PasswordAuth" to="." method="_on_password_auth_auth_failed"]
[connection signal="text_changed" from="VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="pressed" from="VBoxContainer/Server" to="." method="start_server"]
[connection signal="pressed" from="VBoxContainer/Client" to="." method="start_client"]
